<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:elevation="5dp"
                android:translationZ="5dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="25dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/tvWaitingMessage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorDark"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:fontFamily="@font/gilroy_regular"
                        android:text="@string/to_help_us_serve_you_better_please_provide_some_information_concerning_you_chat_experience"/>



                    <EditText
                        android:id="@+id/etFullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:padding="15dp"
                        android:fontFamily="@font/gilroy_medium"
                        android:hint="@string/full_name"
                        android:textSize="12sp"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:textColor="@color/colorDark"
                        android:textColorHint="@color/colorDark"
                        android:background="@drawable/et_bg"/>

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:padding="15dp"
                        android:fontFamily="@font/gilroy_medium"
                        android:hint="@string/email_address"
                        android:textSize="12sp"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/colorDark"
                        android:textColorHint="@color/colorDark"
                        android:background="@drawable/et_bg"/>

                    <EditText
                        android:id="@+id/etMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:padding="15dp"
                        android:fontFamily="@font/gilroy_medium"
                        android:hint="@string/mobile_number"
                        android:textSize="12sp"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textColor="@color/colorDark"
                        android:textColorHint="@color/colorDark"
                        android:background="@drawable/et_bg"/>

                <EditText
                        android:id="@+id/etSubject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:padding="15dp"
                        android:fontFamily="@font/gilroy_medium"
                        android:hint="@string/subject"
                        android:textSize="12sp"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/colorDark"
                        android:textColorHint="@color/colorDark"
                        android:background="@drawable/et_bg"/>


                    <EditText
                        android:id="@+id/etQuestion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:padding="15dp"
                        android:fontFamily="@font/gilroy_medium"
                        android:hint="@string/type_your_question_or_message"
                        android:textSize="12sp"
                        android:inputType="textMultiLine"
                        android:layout_gravity="start"
                        android:textAlignment="viewStart"
                        android:minLines="3"
                        android:maxLines="3"
                        android:gravity="start"
                        android:textColor="@color/colorDark"
                        android:textColorHint="@color/colorDark"
                        android:background="@drawable/et_bg"/>




                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bt_button"
                        android:padding="15dp"
                        android:text="@string/send"
                        android:textColor="@color/colorWhite"
                        android:gravity="center"
                        android:id="@+id/btnSendMessage"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/gilroy_bold"/>



                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


</ScrollView>