<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_centerInParent="true">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:elevation="5dp"
            android:translationZ="5dp"
            app:cardCornerRadius="10dp"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:orientation="vertical">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/ivThumbUp"
                        android:layout_width="29dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/thumbup" />

                    <ImageView
                        android:id="@+id/ivThumbDown"
                        android:layout_width="29dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="10dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/dislike" />

                </LinearLayout>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:fontFamily="@font/gilroy_bold"
                    android:textColor="@color/colorDark"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/rate_your_chat_experience"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorDark"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:fontFamily="@font/gilroy_regular"
                    android:text="@string/to_help_us_serve_you_better_please_provide_some_information_concerning_you_chat_experience"/>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_bg"
                    android:minLines="4"
                    android:id="@+id/etFeedback"
                    android:maxLines="4"
                    android:gravity="start"
                    android:padding="10dp"
                    android:textColor="@color/colorDark"
                    android:fontFamily="@font/gilroy_regular"
                    android:textSize="13sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:inputType="textMultiLine"/>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bt_button"
                    android:padding="15dp"
                    android:text="@string/close_chat"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:id="@+id/btnCloseChat"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/gilroy_bold"/>



            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</RelativeLayout>